# Saffy

./: .dockerignore  .gitignore  .testenv  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.txt  docker-compose.db.yml  docker-compose.yaml  docker-compose.yml  index.html  openapi.json  package-lock.json  package.json  testenv.txt  tsconfig.app.json  types.ts  wrangler.toml
backend/: Cargo.toml  Dockerfile  config.toml  openapi.json
backend/.sqlx/: query-00459088875f2dedc989277a16142f83fd9b0097361f2fb8d1532e63f9116b56.json  query-04126ea64045db22bf0a11b1409ba317611bd9af9f913985b68b005fde2e0941.json  query-04e8ee17b60945e2a98b0a59ea291619c1d48e9b46f3187c17094156e69843b0.json  query-32558c51662e29af7af0145edae90fcdc688e11b8659c775617d7bea555c96d8.json  query-3582477e479d7e6350a7c0cc4d03c92a0a8d31314a581e2d7c30da4046fd096e.json  query-3afc1886250f357f97e680f00da91dd0fc8f73e0717aec62e7c545d14f202564.json  query-54a87ed31f748680630d1795601ad73f661c6f1319dc03cec445114bd9e95a09.json  query-7972f650e5d899189ab72be29b3628bce8a500c0862198f6241106c982ae3e16.json  query-86aa6b2970f20a7080ebf00dbd16869a97c58a89bda460c1b361e09a6cbda68a.json  query-a705e9e7e4a821b7b6f822f2689195d4100ea9d75bfd9caad5eed0b1226950bb.json  query-aec31ba53fc195b1dbfb80ca1a707ae9c0f00ca13ececbf7c92ad6c58e12cd1c.json  query-c398b4368e3ff084d93d153d481e21d68abfdb0ce586b1595bd696591a500ea3.json  query-e4e8d1d5d76f6d96bb4fb0bbe93934cce4324e32ea77eb3c13b93398f49c088c.json
backend/bindings/: Issue.ts  User.ts
backend/scripts/: locations.py  parsed.json  pyproject.toml  static_data.py
backend/sql/: drop.sql  insert_issue.sql  load_locations.sh  load_tags.sh  locations.csv  newest.sql  newest_issues.sql  relevant.sql  relevant_issues.sql  schema.sql  select_issue.sql  tags.csv
backend/src/: api.rs  auth.rs  config.rs  error.rs  issues.rs  lib.rs  main.rs  models.rs  reports.rs  routes.rs  utils.rs
backend/src/api/: auth.rs  issues.rs  locations.rs  tags.rs
backend/src/api/issues/: models.rs  routes.rs  search.rs
backend/src/issues/: search.rs
backend/src/models/: issues.rs  user.rs
backend/src/routes/: api.rs  auth.rs
backend/src/routes/api/: issues.rs  users.rs
backend/src/routes/auth/: cas.rs  login.rs  logout.rs
frontend/: .prettierrc  Dockerfile  README.md  drop.sql  eslint.config.js  index.html  package.json  schema.sql  schemas.ts  tsconfig.app.json  tsconfig.json  types.ts  vite.config.ts  wrangler.toml
frontend/functions/: [[path]].ts
frontend/functions/api/: [[path]].ts
frontend/src/: App.tsx  AuthContext.tsx  index.css  index.js  index.ts  main.tsx
frontend/src/api/: index.ts  types.ts
frontend/src/components/: DateSlider.tsx  DropDown.tsx  InputBar.tsx  IssueFeed.tsx  IssueFeedLegacy.tsx  IssueStatusSelect.tsx  LocationSearch.tsx  MessageBar.tsx  Multiselect.tsx  NewIssueButton.tsx  Search Bar.tsx  SearchBar.ts  SearchBar.tsx  SearchableDropdown.tsx  TagFilter.tsx  TagSelectionBox.tsx  reportForm.tsx
frontend/src/hooks/: AuthContext.tsx  UseDefaultData.ts  UseIssueFeed.ts
frontend/src/pages/: Home.tsx  IssuePage.tsx  NewIssue.tsx
frontend/src/pages/Home/: Home.module.css  Home.tsx  HomeSearchbar.tsx  NewIssueButton.tsx  index.ts
frontend/src/pages/IssuePage/: IssuePage.tsx  index.ts
frontend/src/pages/NewIssuePage/: NewIssue.tsx  NewIssueButton.tsx  index.ts
frontend/src/schemas/: index.ts  reports.ts
frontend/src/types/: api.d.ts  index.ts
frontend/src/types/rust/: CreateIssue.ts  Location.ts  index.ts
frontend/src/types/schemas/: index.ts  issues.ts  location.ts  user.ts
functions/: _middleware.ts
functions/api/: _middleware.js  _middleware.ts  cas.ts  login.ts  user.ts
functions/api/auth/: cas.js  cas.ts  login.js  login.ts  logout.js  logout.ts
functions/api/users/: me.js  me.ts
scripts/: load_prod.py  locations.json  pyproject.toml  static_data.py  tags.csv
src/: App.tsx
