[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
tower-sessions = "0.15.0"
http = "1.4.0"
reqwest = { version = "0.13.2", features = ["json"] }
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.0"
url = { version = "2.5", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing", "tracing-log"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono"
]}
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.101"
dotenv = "0.15.0"

rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
typify = "0.6.1"
schemars = "1.2.1"
serde_json = "1.0.149"
ts-rs = {  version = "12.0.1", features = ["chrono-impl"] }