[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
tower-sessions = "0.15.0"
http = "1.4.0"
reqwest = { version = "0.13.2", features = ["json"] }
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
url = { version = "2.5", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing", "tracing-log"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "uuid"
]}
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.101"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
utoipa-axum = "0.2.0"
utoipa = {  version = "5.4.0", features = ["chrono", "uuid", "preserve_order"] }
utoipauto = "0.2.0"
base64 = "0.22.1"