[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls = { version = "0.23.38", features = ["aws_lc_rs"] }
axum-extra = { version = "0.12.6", features = ["cookie"]}
jsonwebtoken = {  version = "10.3.0", features = ["aws_lc_rs"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
http = "1.4.0"
reqwest = { version = "0.13.2", features = ["json"] }
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
url = { version = "2.5", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing", "tracing-log"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "uuid"
]}
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.101"
serde_json = "1.0.149"
dotenvy = "0.15.7"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
utoipa-axum = "0.2.0"
utoipa = {  version = "5.4.0", features = ["chrono", "uuid", "preserve_order"] }
utoipauto = "0.2.0"
base64 = "0.22.1"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }