[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "types-psycopg2 (>=2.9.21.20260408,<3.0.0.0)",
    "mypy (==1.20.1)"
]